# pickle-bot

./: .dockerignore  .env  CLAUDE.md  Dockerfile  PLAN.md  README.md  compose.yaml  main.py  pyproject.toml  temp.md
.github/workflows/: publish.yml  test.yml
config/: default.yaml
default_workspace/: AGENTS.md  BOOTSTRAP.md
docs/: architecture.md  configuration.md  extending.md  features.md  messagebus-setup.md
docs/plans/: 2026-02-13-agent-session-refactor-design.md  2026-02-13-agent-session-refactor.md  2026-02-13-jsonl-history-design.md  2026-02-13-jsonl-history-impl.md  2026-02-13-session-chat-refactor-design.md  2026-02-13-session-chat-refactor.md  2026-02-14-agent-definition-system-design.md  2026-02-14-agent-definition-system.md  2026-02-14-message-conversion-methods-design.md  2026-02-14-message-conversion-methods.md  2026-02-14-resolve-config-paths-design.md  2026-02-14-resolve-config-paths.md  2026-02-15-cron-ops-skill-design.md  2026-02-15-cron-ops-skill.md  2026-02-15-cron-system-design.md  2026-02-15-cron-system-implementation.md  2026-02-15-def-loader-utilities-design.md  2026-02-15-def-loader-utilities-implementation.md  2026-02-15-skill-system-design.md  2026-02-15-skill-system-implementation.md  2026-02-16-cookie-memory-design.md  2026-02-16-cookie-memory-implementation.md  2026-02-16-message-bus-design.md  2026-02-16-message-bus-implementation.md  2026-02-16-post-message-tool-design.md  2026-02-16-post-message-tool-implementation.md  2026-02-16-subagent-dispatch-design.md  2026-02-16-subagent-dispatch-implementation.md  2026-02-16-test-enhancement-design.md  2026-02-16-test-enhancement-implementation.md  2026-02-17-cookie-user-context-design.md  2026-02-17-cookie-user-context.md  2026-02-17-heartbeat-projects-design.md  2026-02-17-messagebus-context-refactor-design.md  2026-02-17-messagebus-context-refactor-implementation.md  2026-02-17-one-off-cron-design.md  2026-02-17-one-off-cron-implementation.md  2026-02-18-frontend-injection-design.md  2026-02-18-frontend-injection-implementation.md  2026-02-18-session-history-limits-design.md  (+89 more)
tests/: conftest.py  helpers.py  test_agent_web_tools.py  test_config_web.py  test_context_guard.py
tools/: .gitkeep
(+187 files in other folders)
